# story-meister

./: README.md  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/stories/: page.tsx
components/: Navbar.tsx
components/writing/: WriteFromPrompt.tsx  WriteYourself.tsx
hooks/: useGetPrompt.ts  useStories.ts
public/: story_prompt_elements.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
