[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

# structured logging to stdout + file
tauri-plugin-log = "2.2"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
rusqlite = "0.36.0"
